# mira-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile.lambda  README.md  pyproject.toml
agents/: __init__.py  orchestrator.py  post_call.py  prompts.py  receptionist.py  state.py
agents/tools/: __init__.py  book_appointment.py  check_availability.py  context.py  end_call.py  lookup_business.py  notify_owner.py  save_call_record.py  save_lead.py  send_call_summary.py
api/: conversation_relay.py  lambda_handler.py  main.py  owner.py  twilio_auth.py  twilio_voice.py  ws_handler.py
db/: __init__.py  dynamodb.py  sqlite.py
evals/: post_call_scenarios.yaml  scenarios.yaml
infra/: package-lock.json  package.json  tsconfig.json
infra/lib/: mira-stack.ts
scripts/: build_lambda_bundle.sh  demo_cli.py  generate_ivr_audio.py  run_evals.py  run_post_call_evals.py  seed.py  smoke_test.py
services/: __init__.py  scheduling.py  secrets.py  sms.py
tests/: conftest.py  test_booking.py  test_conversation_relay.py  test_owner_api.py  test_post_call.py  test_receptionist.py  test_sms.py  test_tools.py  test_twilio_auth.py  test_twilio_voice.py
