[project]
name = "mira-ai"
version = "0.1.0"
description = "Mira — Managed Inbound Reception Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "twilio>=9.0.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "db*", "api*", "services*"]
